--- a/gpg_urdf/CMakeLists.txt
+++ b/gpg_urdf/CMakeLists.txt
@@ -155,10 +155,14 @@ include_directories(
 
 ## Mark executable scripts (Python etc.) for installation
 ## in contrast to setup.py, you can choose the destination
-# catkin_install_python(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
+ catkin_install_python(PROGRAMS
+   scripts/gpg_frame_broadcaster.py
+   scripts/gpg_frame_listener.py
+   scripts/model_state_to_pose.py
+   scripts/send_random_goal.py
+   scripts/fake_depth_publisher.py
+   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+ )
 
 ## Mark executables for installation
 ## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
